freegeek-extras (1.2.19) UNRELEASED; urgency=low

  * debian/copyright: refer to GPL-2 explicitly.
  * debian/control: fix ambiguous versioned conflicts in freegeek-extras-pdx.
  * debian/rules: remove generated apt sources.list.d files.

 -- Vagrant Cascadian <vagrant@debian.org>  Tue, 01 Feb 2011 15:09:01 -0800

freegeek-extras (1.2.18) freegeek-test; urgency=low

  [ Ryan Niebur ]
  * change the recommended resolution from 1024x768 to 1024x768 or
    larger as requested by Meredith (see #20739)
  * report maximum cpu speed in basicheck (Closes: #20739)
  * change the homepage (Closes: #20587)

  [ Vagrant Cascadian ]
  * basiccheck: removed questions about hard drives, serial and parallel ports.
    (Closes: #21122)
  * add content to homepage (Closes: #20587). 

 -- Vagrant Cascadian <vagrant@debian.org>  Tue, 01 Feb 2011 14:10:01 -0800

freegeek-extras (1.2.17) freegeek-test; urgency=low

  [ Ryan Niebur ]
  * fix basiccheck hard drive test (Closes: #19733)

  [ Vagrant Cascadian ]
  * configure sources.list based on the running distribution.
  * depend on lsb-release where appropriate.

 -- Vagrant Cascadian <vagrant@debian.org>  Sat, 06 Nov 2010 17:29:48 -0700

freegeek-extras (1.2.16) freegeek-test; urgency=low

  * download the generated printme so that the customer/adopter can view
    the printme later
  * add a menu item for the generated printme (Closes: #20043)

 -- Ryan Niebur <ryan@debian.org>  Sat, 30 Oct 2010 13:45:34 -0700

freegeek-extras (1.2.15) freegeek-test; urgency=low

  * really disable screen locking by default, by using lower-case true/false
    gconf booleans. (Closes: #20285)

 -- Vagrant Cascadian <vagrant@debian.org>  Thu, 28 Oct 2010 12:37:09 -0700

freegeek-extras (1.2.14) freegeek-test; urgency=low

  * Add usb-modeswitch to Recommends (Closes: #19783, #18451).
  * add debconf-utils to Depends. 
  * add batterytest script (Closes: #19957). 
  * disable screen locking by default (Closes: #20285)
