@@ -88,4 +88,10 @@ tests:
       The value should be close to the number of megabytes of memory
       you have installed in this system.  It will typically be a
       bit smaller (e.g. 502 for a 512 megabyte system).
+  checkIntelVideo:
+    command: lspci | grep 82845 && echo video card OK || echo video card BAD
+    title: "Checking for incompatible video cards:"
+    explanation: |-
+      If the result comes up with a BAD video card, it is a video card that is
+      poorly supported on recent versions of Ubuntu.
 server: pingme.freegeek.org.
